# denops-inspector

./: Cargo.toml  README.md  deps.ts  mod.ts
denops-debugger-cli/: Cargo.toml
denops-debugger-cli/src/: client.rs  html.rs  info.rs  logging.rs  main.rs  manager.rs  types.rs  ws_manager.rs
denops-debugger-cli/src/native/: logging.rs
denops-debugger-cli/src/transport/: method_call_registry.rs  mod.rs
denops-debugger-core/: Cargo.toml
denops-debugger-core/src/: client.rs  lib.rs  ws_manager.rs
denops-debugger-core/src/v8_types/inspector/: mod.rs  version.rs
denops-debugger-core/tests/: native.rs  wasm.rs
denops-debugger-wasm/: Cargo.toml
denops-debugger-wasm/src/: lib.rs  ws_manager.rs
v8-inspector-api-types/: Cargo.toml
v8-inspector-api-types/src/: browser.rs  commands.rs  errors.rs  http_methods.rs  lib.rs  messages.rs  methods.rs  target.rs  types.rs  version.rs  websocket_target_list.rs
v8-inspector-api-types/src/protocols/: debugger.rs  mod.rs  runtime.rs  target.rs
v8-inspector-api-types/src/protocols/debugger/: events.rs  methods.rs  types.rs
v8-inspector-api-types/src/protocols/runtime/: events.rs  methods.rs  types.rs
v8-inspector-api-types/tests/: main.rs
