[package]
name = "denops-debugger-cli"
version = "0.1.0"
authors = ["kkiyama117 <k.kiyama117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0"
async-trait = "0.1"
futures="0.3"
futures-util = "0.3"
serde = "1.0"
serde_json = "1.0"
url = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "io-std", "sync", "net", "time", "process", ] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.14.0" }
tungstenite = "0.13"
clap = "3.0.0-beta.2"
ctrlc = "3"
notify = "4"
denops-debugger-core = { version = "0.1", path = "../denops-debugger-wasm" }
v8-inspector-api-types = { version = "0.1", path = "../v8-inspector-api-types" }

