[package]
name = "denops-debugger-core"
version = "0.1.0"
authors = ["kkiyama117 <k.kiyama117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = { version = "0.3", features = ["thread-pool"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
v8-inspector-api-types = { version = "0.1", path = "../v8-inspector-api-types" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "io-std", "sync", "net", "time", "process", ] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.14.0" }
tungstenite = "0.13"
clap = "3.0.0-beta.2"
ctrlc = "3"
notify = "4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.71", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1" }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    'Headers',
    "MessageEvent",
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "ProgressEvent",
    "WebSocket",
    'Window',
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.21"