[package]
name = "v8-inspector-api-types"
version = "0.1.0"
authors = ["kkiyama117 <k.kiyama117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
url = { version = "2", features = ["serde"] }
thiserror = "1.0"
serde = {version = "1.0",features = ["derive"]}
serde_json = "1.0"